--- a/H1Emu Launcher/Properties/Resources.resx
+++ b/H1Emu Launcher/Properties/Resources.resx
@@ -244,4 +244,7 @@
   <data name="Assets_258" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Assets_258.pack;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Assets_259" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Assets_259.pack;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
